fixed width, align and added hover

--- a/css/eventify.css
+++ b/css/eventify.css
@@ -24,7 +24,9 @@
 
 .ei-nav-container {
 }
-
+#ei-events {
+	width: 410px;
+}
 #ei-events h2 {
 	display: inline;
 	font-family: 'Bebas Neue';
@@ -34,6 +36,7 @@
 	margin: 0;
 	padding: 0;
 	padding-right: 10px;
+	text-align: left;
 }
 .ei-nav-arrows {
 	display: inline;
@@ -47,6 +50,8 @@
 }
 .ei-nav-container i:hover {
 	cursor: pointer;
+	opacity: 0.7;
+   filter: alpha(opacity=70); /* For IE8 and earlier */
 }
 .ei-event {
 	width: 410px;
